--- a/index.html
+++ b/index.html
@@ -12,9 +12,9 @@
     <title>CV</title>
 </head>
 <body class="bg-light">
-    <div class="container p-5 ">
+    <div class="container p-3 ">
         <div class="row">
-            <div class="col-md-4 bg-dark text-white text-center py-5">
+            <div class="col-md-4 bg-dark text-white text-center py-4">
                 <div class="header">
                     <img id="fotoPerfil" src="" class="img-thumbnail rounded-circle mb2">
                     <h1 id="nombre" class=""></h1>
@@ -43,15 +43,15 @@
                     </ul>
                     </div>
             </div>
-            <div class="col-md-8 bg-light text-dark py-5 px-5">
+            <div class="col-md-8 bg-light text-dark py-4 px-4">
                 <div class="header-end">
 
-                    <div>
-                        <a class="btn btn-dark my-4" href="#perfil">Perfil</a>
-                        <a class="btn btn-dark my-4" href="#experiencia">Experiencia</a>
-                        <a class="btn btn-dark my-4" href="#habilidades">Habilidades</a>
-                        <a class="btn btn-dark my-4" href="#idioma">Idioma</a>
-                        <a class="btn btn-dark my-4" href="#idioma">Portfolio</a>
+                    <div class="my-2">
+                        <a class="btn btn-dark mb-2" href="#perfil">Perfil</a>
+                        <a class="btn btn-dark mb-2" href="#experiencia">Experiencia</a>
+                        <a class="btn btn-dark mb-2" href="#habilidades">Habilidades</a>
+                        <a class="btn btn-dark mb-2" href="#idioma">Idioma</a>
+                        <a class="btn btn-dark mb-2" href="#idioma">Portfolio</a>
                     </div>
                     <h4 class="text-uppercase">Perfil profesional</h4>
                     <hr>
